# fm_synth

./: .gitignore  Cargo.toml  build.sh
.github/workflows/: deploy.yml
docs/pkg/: fm_synth.js  fm_synth_bg.wasm
src/: backup.rs  lib.rs  main.rs  synth_core.rs  synth_data.rs
