[package]
name = "fm_synth"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
anyhow = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["AudioContext", "OscillatorNode", "GainNode", "AudioDestinationNode"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fm_synth"
path = "src/main.rs"
